refactor: little changes
Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>